# SM-Backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  ruff.toml
.github/workflows/: actions.yml  container.yml
src/server_manager/: __main__.py
src/server_manager/cli/: __init__.py  kubernetes_cli.py
src/server_manager/cli/completion/: container_auto.py  image_auto.py
src/server_manager/common/: container_data.py  log_util.py  template.py  util.py
src/server_manager/common/api/: docker_container_api.py  docker_image_api.py  file_access_api.py
src/server_manager/common/monitor/: stats_monitor.py
src/server_manager/completion/: container_auto.py  image_auto.py
src/server_manager/gui/: main.py  manager_app.py
src/server_manager/gui/resources/: confirmation_prompt.tcss  main.tcss  server_form.tcss
src/server_manager/gui/upload_tool/: index.html  upload_tool.py
src/server_manager/gui/widgets/: confirmation_prompt.py  server_form.py
src/server_manager/resources/: dev.sql  minecraft.template.json  string.json  template.schema.json
src/server_manager/templates/: minecraft_java_8.json  test_template.json  test_template_two.json
src/server_manager/webservice/: db_models.py  graphql.py  logger.py  models.py  socket.py  template_loader.py  webservice.py
src/server_manager/webservice/api/: container_api.py  managment_api.py  nodes_api.py  server_api.py  system_api.py  template_api.py  websocket_api.py
src/server_manager/webservice/docker_interface/: docker_container_api.py  docker_image_api.py  docker_types.py  docker_volume_api.py
src/server_manager/webservice/interface/: interface.py  interface_manager.py
src/server_manager/webservice/interface/docker/: docker_container_api.py  docker_volume_api.py
src/server_manager/webservice/interface/docker_api/: container_api.py  docker_container_api.py  docker_volume_api.py  server_router.py  streaming_api.py
src/server_manager/webservice/interface/kubernetes_api/: container_api.py  streaming_api.py  volume_api.py
src/server_manager/webservice/net/: server_router.py
src/server_manager/webservice/routes/: management_api.py  managment_api.py  nodes_api.py  search_api.py  server_api.py  template_api.py  volumes_api.py
src/server_manager/webservice/routes/containers/: api.py  volumes_api.py
src/server_manager/webservice/util/: auth.py  context_provider.py  data_access.py  debug_client.py  dev.py  env_check.py  recovery.py  singleton.py  util.py
tests/: __init__.py  conftest.py  mock_data.py  server_manager_test.py  test_server_router.py
tests/net/: test_server_router.py
tests/util/: test_auth.py  test_data_access.py
tests/webservice/: test_graphql.py  test_webservice.py
tests/webservice/docker_interface/: test_docker_container_api.py  test_docker_image_api.py  test_docker_volume_api.py
tests/webservice/interface/docker/: test_docker_container_api.py  test_docker_image_api.py  test_docker_volume_api.py
tests/webservice/interface/docker_api/: test_docker_container_api.py  test_docker_image_api.py  test_docker_volume_api.py  test_server_router.py
tests/webservice/net/: test_server_router.py
tests/webservice/routes/: test_management_api.py  test_nodes_api.py  test_search_api.py  test_server_api.py  test_template_api.py  test_volumes_api.py
tests/webservice/util/: test_auth.py  test_context_provider.py  test_data_access.py  test_env_check.py
tools/: deploy_kube.py
