[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "server-manager"
dynamic = ["version"]
description = "Server Manager"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "NS", email = "nathanswanson370@gmail.com" }]
dependencies = [
    "click",
    "fastapi[standard]",
    "python-multipart",
    "cryptography",
    "aiodocker",
    "pyJWT",
    "docker",
    "sqlmodel",
    "websockets",
]

[project.scripts]
server_manager = "server_manager.cli:server_manager"

[tool.hatch.version]
path = "src/server_manager/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/server_manager"]

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff>=0.12.8"]
config-path = "ruff.toml"

# dev
[tool.hatch.envs.default]
dependencies = ["datamodel-code-generator", "debugpy", "python-dotenv"]

# test
[tool.hatch.envs.hatch-test]
dependencies = ["pytest"]
